--- a/render.yaml
+++ b/render.yaml
@@ -1,33 +1,26 @@
 databases:
-  # Define ONLY ONE free tier database instance
-  - name: racing-shared-db
+  - name: shared-racing-db  # Use one instance for both
     plan: free
 
 services:
-  # 1. The Flask API
   - type: web
     name: flask-api-service
     env: docker
-    plan: free
     dockerContext: ./flask_api
     envVars:
       - key: DATABASE_URL
         fromDatabase:
-          name: racing-shared-db
+          name: shared-racing-db
           property: connectionString
+        # We will manually append /flask_db in the dashboard later
 
-  # 2. The Django Web App
   - type: web
     name: django-racing-web
     env: docker
-    plan: free
     dockerContext: ./django_web
     envVars:
-      - key: FLASK_API_URL
-        value: https://flask-api-service.onrender.com
       - key: DATABASE_URL
         fromDatabase:
-          name: racing-shared-db
+          name: shared-racing-db
           property: connectionString
-      - key: SECRET_KEY
-        generateValue: true
+        # We will manually append /django_db in the dashboard later
