--- a/render.yaml
+++ b/render.yaml
@@ -1,5 +1,5 @@
 databases:
-  - name: racing-shared-db  # This matches the one already in your dashboard
+  - name: racing-shared-db  # Ensure this name is NOT empty
     plan: free
 
 services:
@@ -11,7 +11,7 @@ services:
     envVars:
       - key: DATABASE_URL
         fromDatabase:
-          name: racing-shared-db
+          name: racing-shared-db  # This must match the database name above exactly
           property: connectionString
 
   - type: web
@@ -24,7 +24,7 @@ services:
         value: https://flask-api-service.onrender.com
       - key: DATABASE_URL
         fromDatabase:
-          name: racing-shared-db
+          name: racing-shared-db  # Match this exactly too
           property: connectionString
       - key: SECRET_KEY
         generateValue: true
