updated docker file

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,18 +7,26 @@ services:
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: mohith
+      POSTGRES_DB: flask_db  # Added this to ensure the DB name is set on boot
     ports:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
+    # --- ADD THIS HEALTHCHECK ---
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres -d flask_db"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
 
   flask_api:
     build: ./flask_api
     container_name: flask_service
+    # --- CHANGE THIS DEPENDS_ON ---
     depends_on:
-      - db
+      db:
+        condition: service_healthy
     environment:
-      # Critical: Uses 'db' as the hostname
       DATABASE_URL: postgresql://postgres:mohith@db:5432/flask_db
     ports:
       - "5000:5000"
@@ -26,11 +34,11 @@ services:
   django_web:
     build: ./django_web
     container_name: django_service
+    # --- CHANGE THIS DEPENDS_ON SO IT WAITS FOR FLASK TO BE READY TOO ---
     depends_on:
       - db
       - flask_api
     environment:
-      # Critical: Uses 'db' for database and 'flask_api' for the internal URL
       DATABASE_URL: postgresql://postgres:mohith@db:5432/django_db
       FLASK_API_URL: http://flask_api:5000
     ports:
